# fastapi-statly

./: README.md  pyproject.toml  run.sh
fastapi_shortener/src/config/: config.py  init_app.py
fastapi_shortener/src/db/: models.py  shortener.db  utils.py
fastapi_shortener/src/handlers/: url.py
fastapi_shortener/src/internal/urls/: dto.py  utils.py
tests/: test_fastapi_shortener.py
